# tail-stack-events-rust

./: .gitignore  Cargo.toml
src/: arg_parse.rs  credentials.rs  logging.rs  main.rs
