[package]
name = "tail-stack-events"
version = "0.1.0"
authors = ["Edward Makhlin <me@lain.im>"]
edition = "2018"
publish = false

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
ctrlc = "3.1.1"
human-panic = "1.0.1"
rusoto_core = {git = "https://github.com/alex-berger/rusoto", branch = "master" }
rusoto_sts = {git = "https://github.com/alex-berger/rusoto", branch = "master" }
rusoto_ec2 = {git = "https://github.com/alex-berger/rusoto", branch = "master" }
rusoto_cloudformation = {git = "https://github.com/alex-berger/rusoto", branch = "master" }
rusoto_credential = {git = "https://github.com/alex-berger/rusoto", branch = "master" }
futures = "0.1.16"
colored = "1.7"
regex = "1"
clap = "2.32.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false